syntax = "proto3";

package keyvalue;

option go_package = ".";

message GetRequest {
	string key = 1;
}

message GetResponse {
	string value = 1;
}

message PutRequest {
	string key = 1;
	string value = 2;
}

message PutResponse {}

message DeleteRequest {
	string key = 1;
}

message DeleteResponse {}

service Cloud {
	rpc Get(GetRequest) returns (GetResponse);
	rpc Put(PutRequest) returns (PutResponse);
	rpc Delete(DeleteRequest) returns (DeleteResponse);
}